RESOLVED FIXED129878
[GST] Set name to several timeout sources
https://bugs.webkit.org/show_bug.cgi?id=129878
Summary [GST] Set name to several timeout sources
Carlos Garcia Campos
Reported 2014-03-07 05:07:54 PST
Helps a lot when debugging.
Attachments
Patch (4.46 KB, patch)
2014-03-07 05:09 PST, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2014-03-07 05:09:03 PST
Philippe Normand
Comment 2 2014-03-07 05:21:35 PST
Comment on attachment 226118 [details] Patch Nice! I wish we could automate this.
Carlos Garcia Campos
Comment 3 2014-03-07 05:30:20 PST
Note You need to log in before you can comment on or make changes to this bug.