[GST] Set name to several timeout sources https://bugs.webkit.org/show_bug.cgi?id=129878

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::videoChanged):
(WebCore::MediaPlayerPrivateGStreamer::videoCapsChanged):
(WebCore::MediaPlayerPrivateGStreamer::audioChanged):
(WebCore::MediaPlayerPrivateGStreamer::textChanged):
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::volumeChanged):
(WebCore::MediaPlayerPrivateGStreamerBase::muteChanged):

Canonical link: https://commits.webkit.org/147894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165258 268f45cc-cd09-0410-ab3c-d52691b4dbfc